added comments and documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,9 @@
     "from torchvision import datasets, transforms\n",
     "from transformers import AutoModelForImageClassification, AutoConfig\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "import copy"
+    "import copy\n",
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -497,20 +499,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#setting random seed for reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False  \n",
+    "\n",
+    "set_seed()\n",
+    "\n",
     "def initialize_resnet50_from_scratch(num_labels=2):\n",
     "    #loading the ResNet-50 config\n",
     "    config = AutoConfig.from_pretrained(\"microsoft/resnet-50\")\n",
-    "    \n",
     "    #setting number of output classes i.e cats vs dogs\n",
     "    config.num_labels = num_labels\n",
-    "    \n",
     "    #creating model with random initialization i.e. no pretrained weights\n",
     "    model = AutoModelForImageClassification.from_config(config)\n",
-    "    \n",
     "    return model\n",
     "\n",
     "#initializing two models with identical new weights\n",
@@ -1715,24 +1726,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/7], Loss: 1.0053\n",
-      "Epoch [2/7], Loss: 0.9059\n",
-      "Epoch [3/7], Loss: 0.7436\n",
-      "Epoch [4/7], Loss: 0.6791\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 47\u001b[0m\n\u001b[1;32m     45\u001b[0m outputs \u001b[38;5;241m=\u001b[39m model1(images)\u001b[38;5;241m.\u001b[39mlogits\n\u001b[1;32m     46\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(outputs, labels)\n\u001b[0;32m---> 47\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     50\u001b[0m running_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/torch/_tensor.py:521\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    512\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    513\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    514\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    519\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    520\u001b[0m     )\n\u001b[0;32m--> 521\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    522\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/torch/autograd/__init__.py:289\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    284\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    286\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    288\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 289\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    290\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    291\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    293\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    294\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    295\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    296\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/torch/autograd/graph.py:769\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    767\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    768\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 769\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    770\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    771\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    772\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    773\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch [1/10], Loss: 2.9801\n",
+      "Epoch [2/10], Loss: 1.2438\n",
+      "Epoch [3/10], Loss: 0.8429\n",
+      "Epoch [4/10], Loss: 0.7948\n",
+      "Epoch [5/10], Loss: 0.6436\n",
+      "Epoch [6/10], Loss: 0.7003\n",
+      "Epoch [7/10], Loss: 0.6432\n",
+      "Epoch [8/10], Loss: 0.5480\n",
+      "Epoch [9/10], Loss: 0.4854\n",
+      "Epoch [10/10], Loss: 0.3573\n",
+      "\n",
+      "Test Metrics:\n",
+      "Accuracy: 0.5714\n",
+      "Precision: 0.5556\n",
+      "Recall: 0.7143\n",
+      "F1 Score: 0.6250\n"
      ]
     }
    ],
@@ -1772,7 +1781,7 @@
     "optimizer = torch.optim.Adam(model1.parameters(), lr=0.001)\n",
     "\n",
     "#training loop\n",
-    "num_epochs = 7\n",
+    "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
     "    model1.train()\n",
     "    running_loss = 0.0\n",
@@ -1828,25 +1837,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/6], Loss: 1.2010\n",
-      "Epoch [2/6], Loss: 0.9261\n",
-      "Epoch [3/6], Loss: 0.7395\n",
-      "Epoch [4/6], Loss: 0.7249\n",
-      "Epoch [5/6], Loss: 0.6700\n",
-      "Epoch [6/6], Loss: 0.6615\n",
+      "Epoch [1/10], Loss: 1.3146\n",
+      "Epoch [2/10], Loss: 0.7184\n",
+      "Epoch [3/10], Loss: 0.6969\n",
+      "Epoch [4/10], Loss: 0.7763\n",
+      "Epoch [5/10], Loss: 0.7078\n",
+      "Epoch [6/10], Loss: 0.6071\n",
+      "Epoch [7/10], Loss: 0.6462\n",
+      "Epoch [8/10], Loss: 0.6070\n",
+      "Epoch [9/10], Loss: 0.6481\n",
+      "Epoch [10/10], Loss: 0.5912\n",
       "\n",
       "Test Metrics:\n",
-      "Accuracy: 0.6071\n",
-      "Precision: 0.5652\n",
-      "Recall: 0.9286\n",
-      "F1 Score: 0.7027\n"
+      "Accuracy: 0.7143\n",
+      "Precision: 0.6667\n",
+      "Recall: 0.8571\n",
+      "F1 Score: 0.7500\n"
      ]
     }
    ],
@@ -1888,7 +1901,7 @@
     "optimizer = torch.optim.Adam(model2.parameters(), lr=0.001)\n",
     "\n",
     "#training loop\n",
-    "num_epochs = 7  # Increased from 2 for better convergence\n",
+    "num_epochs = 10  # Increased from 2 for better convergence\n",
     "for epoch in range(num_epochs):\n",
     "    model2.train()\n",
     "    running_loss = 0.0\n",
@@ -1933,6 +1946,68 @@
     "print(f\"Precision: {precision:.4f}\")\n",
     "print(f\"Recall: {recall:.4f}\")\n",
     "print(f\"F1 Score: {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training Parameters and Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Model Architecture Details : ResNet-50 (Initial weights of both the models are same)\n",
+    "- Optimizer : Adam with a learning rate of 0.01\n",
+    "- Loss Function : Cross-Entropy Loss function \n",
+    "- Number of Epochs : 7\n",
+    "- Batch Size : 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model and It's Architecture Diagram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![ResNet-50 Architecture](ResNet50.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Result and Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Model                    | Loss   | Accuracy | Precision | Recall  | F1 Score |\n",
+    "|--------------------------|--------|----------|-----------|---------|----------|\n",
+    "| Non-Augmented Data        | 0.3573 | 0.5714   | 0.5556    | 0.7143  | 0.6250   |\n",
+    "| Augmented Data            | 0.5912 | 0.7143   | 0.6667    | 0.8571  | 0.7500   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The model trained on original dataset shows consistent loss reduction but with a low accuracy of 57.14%. This could possibly be due to overfitting.\n",
+    "\n",
+    "- The model trained on augmented data shows higher final training loss but it has better accuracy as compared to the model trained on the original dataset. This shows that augmentation of data is preventing overfitting.\n",
+    "\n",
+    "- For other parameters, the model trained on augmented data has higher precision, recall and F1 score. This indicates that the model trained on augmented data generalizes better giving us more accuracy. \n",
+    "\n",
+    "- For training losses over epochs in both the model, we observe that there are some fluctuations. These fluctuations can be avoided implementing optimal learning rate and number of epochs. "
    ]
   },
   {
